tests/typing/bad/testfile-variance-7.scala

class Queue[+T] { def append(x: T) {} }
object Main { def main(args: Array[String]) { } }
